--- a/index.qmd
+++ b/index.qmd
@@ -7,7 +7,8 @@ about:
   image-shape: round
   image-width: 17em
   links:
-    - text: GitHub
+    - icon: github
+      text: GitHub
       href: https://github.com/worldregio
 ---
 
