--- a/posts/2024-09-01-newsworld/index.qmd
+++ b/posts/2024-09-01-newsworld/index.qmd
@@ -1,16 +1,16 @@
 ---
 title: "Should Africa be renamed?"
 description: "Dissemination of a recent research paper by *The Conversation*"
-author:
-  - name: Claude Grasland
-    url: https://worldregio.github.io/
-    orcid: 0000-0003-1504-4965
-    affiliation: Professor of Geography at Université Paris Cité & Member of UMR 8504 Géographie-cités
-    affiliation-url: https://geographie-cites.cnrs.fr/
+#author:
+#  - name: Claude Grasland
+#    url: https://worldregio.github.io/
+#    orcid: 0000-0003-1504-4965
+#    affiliation: Professor of Geography at Université Paris Cité & Member of UMR 8504 Géographie-cités
+#    affiliation-url: https://geographie-cites.cnrs.fr/
 date: 09-01-2024
 categories: [World News, Africa] # self-defined categories
-citation: 
-  url: https://worldregio.github.io/posts/2024-09-01-newsworld/ 
+#citation: 
+#  url: https://worldregio.github.io/posts/2024-09-01-newsworld/ 
 image: news.jpg
 draft: false # setting this to `true` will prevent your post from appearing on your listing page until you're ready!
 bibliography: references.bib
