--- a/posts/2024-09-27-geopolitical-networks/index.qmd
+++ b/posts/2024-09-27-geopolitical-networks/index.qmd
@@ -13,11 +13,10 @@ citation:
   url: https://worldregio.github.io/en/posts/2024-09-27-geopolitical-networks/ 
 image: img/network004a.png
 draft: false # setting this to `true` will prevent your post from appearing on your listing page until you're ready!
+bibliography: references.bib
 ---
 
-
-![Geopolitical network](img/network004a.png){width=400}
-
+![Geopolitical network](img/network004a.png){width="400"}
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE, widgetframe_widgetsdir = 'widgets')
@@ -29,9 +28,6 @@ library(visNetwork, quietly = TRUE)
 library(widgetframe)
 ```
 
-
-
-
 ## Introduction
 
 Une des options possibles du projet Worldregio est de proposer des méthodes de régionalisation basées sur la division d'un réseau d'Etats en sous-réseaux (composantes) selon un double critère :
@@ -39,35 +35,33 @@ Une des options possibles du projet Worldregio est de proposer des méthodes de 
 -   **proximité géométrique** : les composantes du sous-graphe doivent former des ensembles connexes.
 -   **proximité attributaire** : les composantes doivent maximiser un critère de similarité ou d'interaction indépendant de la proximité géométrique
 
-
 La définition d'un **réseau géopolitique** au niveau mondial implique la définition conjointe de deux listes d'objets :
 
-- une liste finie d'unités politiques appelées *États*
-- une liste finie de relations entre unités politiques appelées *frontières*
+-   une liste finie d'unités politiques appelées *États*
+-   une liste finie de relations entre unités politiques appelées *frontières*
 
 Notez que *États* et *frontières* sont utilisés ici dans le sens abstrait de *noeuds* et *sommets*, ce qui signifie qu'ils ne correspondent pas nécessairement à l'idée que l'on se fait du sens commun.
 
+Cette question de la distance entre pays a fait historiquement l'objet de nombreuses recherches, notamment dans le cadre du projet [correlates of war (cow)](https://correlatesofwar.org/), un réseau de chercheur en sciences politiques et d'historien qui ont essayé de comprendre les causes des guerres et des conflits. Parmi de nombreuses solutions, les auteurs privilégient souvent la contiguïté c'est-à-dire la présence d'une frontière commune :
+
+> "Whatever the reason for the findings connecting contiguity and conflict, geographic proximity is clearly important factor for empirical analyses of international relations. Several approaches are based on continuous measures of distance between countries. The distance between national capitals (Gleditsch and Singer 1975), or between centers of power (Bueno de Mesquita 1981 ), have been used to as measures of geographic proximity. Gleditsch and Ward (2001) have begun to construct a data set based on the concept of minimum distance, which is simply the distance between the two closest points for a pair of states. Nevertheless, direct contiguity is relatively straightforward and has therefore been, by far, the most common way of measuring proximity."[@stinnett2002].
+
+C'est la solution que nous allons adopter ici en essayant d'actualiser la base produite par ces auteurs au début des années 2000.
+
 ## A. Les états comme noeuds ?
-
-
 
 La définition d'une liste finie d'états sera nécessairement compliquée car de nombreux *territoires contestés* dans le monde ne sont pas reconnus par tous les pays du monde et sont donc difficiles à définir en termes de géométrie et sont absents des bases de données où les attributs utilisés pour la régionalisation sont disponibles.
 
 De nombreuses listes de pays - ou territoires à souveraineté partielle - sont disponibles dans les logiciels de cartographie open source (*gadm*, *natural earth*, ...) mais avec des listes de pays différentes et aussi des géométries différentes !
 
-
-
-- **Taïwan** : le territoire est relativement bien défini mais le pays n'est pas présent dans les bases de données officielles de l'ONU car la Chine le considère comme une province chinoise. Mais dans d'autres bases de données (par exemple sur le commerce), Taïwan existe.
-- **Chypre du Nord** : le territoire n'est reconnu comme un État que par la Turquie, l'UE le considérant comme une partie occupée de Chypre. Le territoire est relativement bien défini. L'UE le considère comme une partie occupée de Chypre.
-- **L'Abkhazie, l'Ossétie du Sud, la Transnitrie, ...** sont des Etats de facto reconnus par la Russie.
-- **Kosovo** : non reconnu par tous les Etats membres de l'UE- ...
-
+-   **Taïwan** : le territoire est relativement bien défini mais le pays n'est pas présent dans les bases de données officielles de l'ONU car la Chine le considère comme une province chinoise. Mais dans d'autres bases de données (par exemple sur le commerce), Taïwan existe.
+-   **Chypre du Nord** : le territoire n'est reconnu comme un État que par la Turquie, l'UE le considérant comme une partie occupée de Chypre. Le territoire est relativement bien défini. L'UE le considère comme une partie occupée de Chypre.
+-   **L'Abkhazie, l'Ossétie du Sud, la Transnitrie, ...** sont des Etats de facto reconnus par la Russie.
+-   **Kosovo** : non reconnu par tous les Etats membres de l'UE- ...
 
 ### Quelle géométrie des états ?
 
 En admettant que nous ayons réussi à définir une liste finie d'Etats, un autre problème va se poser concernant la géométrie des Etats qui n'est généralement pas limitée à un seul polygone mais peut généralement être définie comme un multipolygone qui peut inclure des morceaux de territoire très éloignés. Selon la liste des morceaux de territoire que l'on considère, le réseau de frontières sera différent et les résultats de la procédure de régionalisation peuvent être fortement modifiés.
-
-
 
 ```{r, echo=FALSE, eval=TRUE}
 library(geodata)
@@ -76,13 +70,9 @@ m<-st_as_sf(map)
 names(m)<-c("ISO3","country","geometry")
 ```
 
-
-
 #### Le cas de l'Allemagne
 
 L'Allemagne est un cas simple d'État constitué d'un seul polygone (si l'on exclut certaines îles) et où l'on peut facilement proposer une liste d'autres États partageant une frontière terrestre commune : Danemark, Pays-Bas, Belgique, Luxembourg, France, Suisse, Autriche, République tchèque et Pologne. On peut bien sûr arguer que la liste des voisins a changé au cours de l'histoire du pays, mais si l'on considère la situation actuelle, il est relativement facile de dresser une liste.
-
-
 
 ```{r, out.width="500px"}
 stalist <- "DEU"
@@ -101,8 +91,7 @@ mf_label(sel,var = "ISO3", halo = T,cex=0.6, col="red")
 
 #### Le cas du Danemark
 
-Le cas du Danemark est un peu plus difficile, car nous devons décider si le Groenland et les îles Féroé doivent être inclus ou non dans le territoire de l'État danois. Il s'agit dans les deux cas de territoires autonomes plus ou moins éloignés de la zone métropolitaine, avec moins de population mais beaucoup plus de superficie dans le cas du Groenland. Si l'on considère uniquement les frontières terrestres, le Danemark n'a qu'un seul voisin (l'Allemagne) et les territoires éloignés ne modifient pas la topologie. Mais la situation sera différente si l'on considère les frontières maritimes avec des pays comme l'Islande, le Canada, etc. 
-
+Le cas du Danemark est un peu plus difficile, car nous devons décider si le Groenland et les îles Féroé doivent être inclus ou non dans le territoire de l'État danois. Il s'agit dans les deux cas de territoires autonomes plus ou moins éloignés de la zone métropolitaine, avec moins de population mais beaucoup plus de superficie dans le cas du Groenland. Si l'on considère uniquement les frontières terrestres, le Danemark n'a qu'un seul voisin (l'Allemagne) et les territoires éloignés ne modifient pas la topologie. Mais la situation sera différente si l'on considère les frontières maritimes avec des pays comme l'Islande, le Canada, etc.
 
 ```{r, out.width = "500px",fig.cap="What is exactly the teritory of Denmark ?",fig.align='left'}
 stalist<-c("DNK","GRL", "FRO")
@@ -127,11 +116,9 @@ knitr::include_graphics("img/oresund.jpg")
 
 ```
 
-
 #### Le cas de la France
 
 Comme dernier exemple de complexité maximale, nous pouvons considérer le cas de la France où nous avons un grand nombre de territoires rempotés avec une grande diversité de statuts politiques. Certains d'entre eux sont des *départements et territoires d'outre mer (DROM)* alors que d'autres ne sont que des *territoires d'outre mer* avec différents niveaux d'autonomie. Faut-il les inclure ou non dans la liste des territoires utilisés pour la construction de notre réseau ?
-
 
 ```{r}
 stalist<-c("FRA","GUF","GLP","MTQ","REU","PYF","NCL","SPM","ATF")
@@ -151,8 +138,7 @@ Contrairement au Danemark, ces territoires éloignés ne sont pas seulement des 
 
 ## B. Le graphe des pays méditerranéens
 
-
-Nous utilisons ici la carte du monde proposée par le GADM à un faible niveau de résolution et adoptons une projection de Robinson afin d'avoir des distances approximativement en km. 
+Nous utilisons ici la carte du monde proposée par le GADM à un faible niveau de résolution et adoptons une projection de Robinson afin d'avoir des distances approximativement en km.
 
 ```{r}
 # wld<-st_transform(wld,"+proj=robin +lon_0=11.79+x_0=0 +y_0=0 +ellps=WGS84 +datum=WGS84 +units=m +no_defs")
@@ -165,7 +151,6 @@ mf_map(wld, type="base", col="lightyellow")
 mf_layout(title = "The GADM map of the world (Robinson Projection)",
           credits = "Grasland C., GlobReg project")
 ```
-
 
 Nous utilisons la fonction **getBorders()** du package *cartography* élaboré par Nicolas Lambert et Timothee Giraud, ingénieurs à l'UMS RIATE. Nous testons dans un premier temps l'algorithme sur un échantillon limité de 30 pays situés sur les rives nord et sud de la Méditerranée afin de vérifier la qualité des résultats et le temps de calcul sur 30 pays.
 
@@ -185,7 +170,6 @@ t2-t1
 
 
 ```
-
 
 Les frontières terrestres ont été correctement extraites. L'Espagne n'est pas liée au Maroc car Ceuta et Melila ont été éliminés par le niveau de résolution spatiale.
 
@@ -209,7 +193,6 @@ mf_layout(title = "Extraction of land borders",
           credits = "Grasland C., GlobReg project")
 ```
 
-
 ### Frontères terrestres
 
 ```{r, echo = F, eval=FALSE}
@@ -223,20 +206,18 @@ g<-visNetwork(nodes, edges)
 g
 ```
 
-<div class="centered">
-<img src="img/network000.png" width=700px />
-</div>
+::: centered
+<img src="img/network000.png" width="700px"/>
+:::
 
 ### Frontières maritimes
 
 L'algorithme élaboré par N. Lambert et Timothée Giraud (UMS RIATE) est relativement complexe et utilise deux paramètres :
 
-- **width** : la distance maximale à la terre (en mètres)
-- **res** : la grille de points utilisée pour l'analyse de la zone tampon (en mètres). 
+-   **width** : la distance maximale à la terre (en mètres)
+-   **res** : la grille de points utilisée pour l'analyse de la zone tampon (en mètres).
 
 Si une unité n'a pas de terre dans la grille, elle ne sera pas utilisée pour l'analyse des frontières. C'est par exemple un problème dans le cas de Malte où le pays n'est pas pris en compte avec une résolution inférieure à 20km. Selon notre expérience, de bons résultats en un temps raisonnable peuvent être obtenus avec une distance maximale de 500 km et une grille de résolution de 20km.
-
-
 
 ```{r, message=F, waarning = F}
 
@@ -249,8 +230,7 @@ t2<-Sys.time()
 
 ```
 
-
-Malte et Chypre ne sont plus isolées et sont reliées à leurs voisins par des frontières maritimes : 
+Malte et Chypre ne sont plus isolées et sont reliées à leurs voisins par des frontières maritimes :
 
 ```{r}
 # Plot Result
@@ -315,7 +295,6 @@ mf_layout(title = "Combination of land and sea borders",
 
 ```
 
-
 ```{r, echo = F, eval=F}
 nodes<- samp %>% st_drop_geometry() %>%
          select(id = ISO3,label = country)
@@ -327,20 +306,19 @@ g<-visNetwork(nodes, edges)
 g
 ```
 
-<div class="centered">
-<img src="img/network001.png" width=700px />
-</div>
-
+::: centered
+<img src="img/network001.png" width="700px"/>
+:::
 
 ### Distance minimale entre pays
 
 La distance entre deux Etats peut être mesurée de différentes manières. Nous pouvons utiliser ici le travail intéressant effectué par le CEPII pour l'analyse des flux commerciaux qui suggère comme solutions possibles :
 
-- La distance entre les centroïdes de la superficie de chaque Etat
-- La distance entre les capitales de chaque Etat 
-- La distance moyenne entre les principales villes de chaque Etat - - etc.
+-   La distance entre les centroïdes de la superficie de chaque Etat
+-   La distance entre les capitales de chaque Etat
+-   La distance moyenne entre les principales villes de chaque Etat - - etc.
 
-#### Distance entre capitales < 500 km 
+#### Distance entre capitales \< 500 km
 
 ```{r, echo=FALSE, eval=FALSE}
 dis<-read.table("geom/world/dist_cepii2015.csv",
@@ -363,11 +341,12 @@ g
 
 
 ```
-<div class="centered">
-<img src="img/network002.png" width=700px />
-</div>
 
-#### Distance entre capitales < 1000 km
+::: centered
+<img src="img/network002.png" width="700px"/>
+:::
+
+#### Distance entre capitales \< 1000 km
 
 ```{r, echo=FALSE, eval=FALSE}
 dis<-read.table("geom/world/dist_cepii2015.csv",
@@ -389,19 +368,15 @@ g<-visNetwork(nodes, edges)
 g
 ```
 
-<div class="centered">
-<img src="img/network003.png" width=700px />
-</div>
-
+::: centered
+<img src="img/network003.png" width="700px"/>
+:::
 
 ## C. Un réseau géopolitique mondial
 
-
 Nous proposons d'élaborer un réseau complet de pays du monde sur la base de la carte simplifiée du GADM qui contient 231 unités géopolitiques (certaines d'entre elles appartenant au même État). Nous utilisons les frontières terrestres et maritimes comme critères pour la définition des arêtes. Le temps de calcul a été de 11 minutes pour les frontières maritimes avec les paramètres width= 370 km & res 20 km.
 
-
-
-####  Carte des frontières mondiales
+#### Carte des frontières mondiales
 
 ```{r}
 wld<-readRDS("worldreg/wld.RDS")
@@ -425,8 +400,7 @@ mf_layout(title = "World borders map",
           credits = "Grasland C., GlobReg project")
 ```
 
-
-####  Graphe géopolitique mondial 
+#### Graphe géopolitique mondial
 
 ```{r, echo = F, eval=F}
 nodes<- wld %>% st_drop_geometry() %>%
@@ -453,21 +427,18 @@ g<-visNetwork(nodes, edges) %>%
 g
 ```
 
-<div class="centered">
-<img src="img/network004.png" width=700px />
-</div>
-
-
+::: centered
+<img src="img/network004.png" width="700px"/>
+:::
 
 La centralité des pays dans ce réseau géopolitique dépend du nombre de frontières qu'ils partagent avec d'autres pays (Cf. Chine, Iran, Russie, ...).
 
-<div class="centered">
-<img src="img/network004a.png" width=700px />
-</div>
-
+::: centered
+<img src="img/network004a.png" width="700px"/>
+:::
 
 Mais certains pays ayant peu de liens peuvent jouer un rôle stratégique dans le réseau en termes d'interdépendance (cf. les États-Unis, le Canada, l'Islande qui relient l'Amérique à l'Europe et à l'Asie).
 
-<div class="centered">
-<img src="img/network004b.png" width=700px />
-</div>
+::: centered
+<img src="img/network004b.png" width="700px"/>
+:::
